kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efarm-backend
  namespace: backend
  labels:
    app: efarm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efarm-backend
  template:
    metadata:
      labels:
        app: efarm-backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: efarm-backend
          image: sprysio/efarm-backend
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 750Mi
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
