kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efarm-backend-ingress
  namespace: backend
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: efarm-backend-svc
                port:
                  number: 8080
